issue: tablet responsive issues. Fixed footer on tablet layouts

--- a/3.React-Projects/mini-projects/calculator/src/App.css
+++ b/3.React-Projects/mini-projects/calculator/src/App.css
@@ -4,17 +4,27 @@ body {
 
 .calculator {
   max-width: 400px;
-  padding-bottom: 50px;
+  padding-bottom: 0.75rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .calculator {
+    padding-top: 2rem;
+  }
 }
 
 .calculator__outershell {
   background-color: #535b5e;
-
   border: 2px solid #a2a1a6;
+  padding: 0.25rem;
   box-shadow: 11px 10px 34px 1px rgba(0, 0, 0, 0.68),
     inset -1px -6px 12px 0.1px #616571;
 }
-
+@media screen and (min-width: 1024px) {
+  .calculator__outershell {
+    padding: 0.5rem;
+  }
+}
 .calculator__inner {
   margin: 0.025rem 0.25rem;
   background: linear-gradient(to right, #59585e, #333238, #1c1b23);
@@ -24,7 +34,13 @@ body {
     inset -1px -6px 12px 0.1px #211d22;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
+  .calculator__inner {
+    padding: 1rem;
+  }
+}
+
+@media screen and (min-width: 375px) {
   .calculator__outershell {
     border-radius: 5%;
   }
@@ -56,7 +72,15 @@ body {
   height: 70px;
 }
 
+@media screen and (min-width: 1024px) {
+  .calculator__inner--screen {
+    margin: 0.5rem 0.75rem;
+  }
+}
+
 .calculator__inner--entrybox {
+  padding-top: 0.25rem;
+  padding-left: 0.75rem;
   color: #214740;
   text-overflow: clip;
   text-overflow: " ";
